<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add_place"
        android:icon="@drawable/baseline_add_location_white_36"
        android:title="@string/add_place_item"
        app:showAsAction="ifRoom"
        android:onClick="addPlaceClick" />

    <item
        android:id="@+id/item_delete_place"
        android:icon="@drawable/baseline_delete_forever_white_36"
        android:title="@string/delete_place_item"
        app:showAsAction="ifRoom"
        android:onClick="deletePlaceClick" />

    <item
        android:id="@+id/item_exit"
        android:title="@string/login_item"
        app:showAsAction="ifRoom"
        android:onClick="loginClick" />

    <item
        android:id="@+id/item_save"
        android:title="Сохранить маршрут"
        app:showAsAction="ifRoom"
        android:onClick="saveClick" />

    <item
        android:id="@+id/item_load"
        android:title="Загрузить маршрут"
        app:showAsAction="ifRoom"
        android:onClick="loadClick" />

    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/baseline_settings_white_36"
        android:title="@string/settings_item"
        app:showAsAction="ifRoom"
        android:onClick="settingsClick"/>
</menu>