<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/popup_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_title"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/Black"/>

        <RadioButton
            android:id="@+id/RB_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_places_item"
            android:theme="@style/MyRadioButton"
            android:layout_marginStart="5dp"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/RB_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_distance_item"
            android:theme="@style/MyRadioButton"
            android:layout_marginStart="5dp"
            android:textSize="15sp" />


    </RadioGroup>

    <TextView
        android:id="@+id/countKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="30sp"
        android:text="50"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:max="100"
        android:progress="3"
        android:theme="@style/MyRadioButton" />

</LinearLayout>